Bug 1677324 - Add the ability for subdocuments to keep painting another remote subdoc. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D121197